[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 1026.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 25.9735, 14.888 )
color = Color( 0.596078, 0.745098, 0.890196, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -34.0
margin_right = 41.0
margin_bottom = 34.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 82.0
margin_bottom = 20.0
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
text = "Options"

[node name="Quit Game" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
text = "Quit Game"

[node name="version" type="Label" parent="."]
margin_left = 1.0
margin_top = -1.0
margin_right = 83.0
margin_bottom = 13.0
text = "V0.1 Alpha"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit Game" to="." method="_on_Quit_Game_pressed"]
